upgrade microbundle to fix deprecation warning

--- a/app/ui-react/packages/auto-form/package.json
+++ b/app/ui-react/packages/auto-form/package.json
@@ -36,7 +36,7 @@
     "expect": "^24.5.0",
     "jest": "^25.1.0",
     "jest-cli": "^25.1.0",
-    "microbundle": "^0.11.0",
+    "microbundle": "^0.13.3",
     "react": "^16.6.0",
     "react-docgen-typescript-loader": "^3.1.0",
     "react-dom": "^16.6.0",
@@ -55,8 +55,8 @@
     "test": "jest",
     "test:watch": "yarn run test --watch",
     "prebuild": "rimraf dist",
-    "build": "microbundle --format cjs --no-compress",
-    "dev": "microbundle watch --format cjs --no-compress",
+    "build": "microbundle --format cjs --no-compress --jsx React.createElement",
+    "dev": "microbundle watch --format cjs --no-compress --jsx React.createElement",
     "storybook": "start-storybook -p 9002",
     "build-storybook": "build-storybook -o ../../doc/auto-form"
   },
