--- a/app/ui-react/packages/utils/package.json
+++ b/app/ui-react/packages/utils/package.json
@@ -49,8 +49,8 @@
     "test": "jest",
     "test:watch": "yarn run test --watch",
     "prebuild": "rimraf dist",
-    "build": "microbundle --format cjs --no-compress",
-    "dev": "microbundle watch --format cjs --no-compress"
+    "build": "microbundle --format cjs --no-compress --jsx React.createElement",
+    "dev": "microbundle watch --format cjs --no-compress --jsx React.createElement"
   },
   "peerDependencies": {
     "react": "^16.6.0",
